# chess_engine

./: LICENSE  README.md
chess_engine/: CMakeLists.txt  FindReadline.cmake  package.xml
chess_server/: CMakeLists.txt  README.md  gnuchess_if.txt  package.xml
chess_server/action/: AutoPlay.action  ComputeEnginesMove.action  GetEnginesMove.action  MakeAMoveAN.action
chess_server/msg/: ChessCastling.msg  ChessCastlingMsg.msg  ChessCheckMod.msg  ChessColor.msg  ChessEndGameStatus.msg  ChessEndGameStatusMsg.msg  ChessMove.msg  ChessMoveMsg.msg  ChessMoveStamped.msg  ChessMoveStatusMsg.msg  ChessNewGameStatus.msg  ChessNewGameStatusMsg.msg  ChessPiece.msg  ChessPos.msg  ChessResult.msg  ChessResultMsg.msg  ChessSquare.msg
chess_server/src/: chess_as.cpp  chess_as.h  chess_as_auto_play.cpp  chess_as_auto_play.h  chess_as_autoplay.cpp  chess_as_autoplay.h  chess_as_cem.cpp  chess_as_cem.h  chess_as_get_engines_move.cpp  chess_as_get_engines_move.h  chess_as_mam.cpp  chess_as_mam.h  chess_backend.h  chess_backend_gnu.cpp  chess_backend_gnu.h  chess_engine.h  chess_engine_be.h  chess_engine_gnu.cpp  chess_engine_gnu.h  chess_game.cpp  chess_game.h  chess_move.cpp  chess_move.h  chess_server.cpp  chess_server.h  chess_server_main.cpp  chess_thread.cpp  chess_thread.h  msgs.txt
chess_server/srv/: AutoPlay.srv  AutoPlaySvc.srv  ComputeEnginesMove.srv  GetBoardState.srv  GetBoardStateSvc.srv  GetEnginesMove.srv  GetEnginesMoveSvc.srv  GetGameState.srv  GetPlayHistory.srv  MakeAMove.srv  MakeAMoveAN.srv  MakeAMoveSAN.srv  MakeAMoveSANSvc.srv  MakeAMoveSvc.srv  MoveCompleted.srv  Resign.srv  ResignSvc.srv  SetDifficulty.srv  StartNewGame.srv  StartNewGameSvc.srv  UndoMove.srv
chess_tools/: CMakeLists.txt  README.md  package.xml
chess_tools/src/: chess_cli.cpp  chess_parser.cpp  commands.txt
images/src/: .~lock.RefDiagram.odg#  RefDiagram.odg
include/: chess.h
include/chess_engine/: ceBoard.h  ceChess.h  ceEngine.h  ceError.h  ceGame.h  ceMove.h  ceParser.h  cePlayer.h  ceRosMsgs.h  ceSquare.h  ceTypes.h  ceUtils.h
libchessengine/: CMakeLists.txt  README.md  package.xml
libchessengine/src/: ceBoard.cpp  ceChess.cpp  ceCore.cpp  ceEngine.cpp  ceError.cpp  ceGame.cpp  ceMove.cpp  ceParser.cpp  cePlayer.cpp  ceSquare.cpp  ceUtils.cpp
rqt_chess/: CMakeLists.txt  CMakeLists.txt.todo  README.md  mainpage.dox  package.xml  package.xml.todo  rqt_chess.pro
rqt_chess/include/: chessboard.h  mainwindow.h  qnode.h
rqt_chess/include/rqt_chess/: chessscene.h  main_window.hpp  mainwindow.h  qnode.h  qnode.hpp  rosqthread.h  rqtchesswin.h
rqt_chess/resources/: images.qrc
rqt_chess/src/: chessboard.cpp  chessscene.cpp  main.cpp  main_window.cpp  mainwindow.cpp  qnode.cpp  rosqthread.cpp  rqtchesswin.cpp
rqt_chess/ui/: mainwindow.ui  rqtchesswin.ui
