<?xml version="1.0"?>
<package>
  <name>chess_server</name>
  <version>1.0.0</version>
  <description>Provides chess engine server ROS node.</description>

  <maintainer email="robin.knight@roadnarrows.com">Robin Knight</maintainer>
  <license>MIT</license>

  <url type="website">http://github.com/roadnarrows-robotics/chess_engine</url>

  <author email="robin.knight@roadnarrows.com">Robin Knight</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
