<?xml version="1.0"?>
<package>
  <name>chess_tools</name>
  <version>1.0.0</version>
  <description>Provides a set of chess tools.</description>

  <maintainer email="robin.knight@roadnarrows.com">Robin Knight</maintainer>
  <license>MIT</license>

  <url type="website">http://github.com/roadnarrows-robotics/chess_engine</url>

  <author email="robin.knight@roadnarrows.com">Robin Knight</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
