<?xml version="1.0"?>
<package>
  <name>libchessengine</name>
  <version>1.1.0</version>
  <description>Provides chess engine core library.</description>

  <maintainer email="robin.knight@roadnarrows.com">Robin Knight</maintainer>
  <license>MIT</license>

  <url type="website">http://github.com/roadnarrows-robotics/chess_engine</url>

  <author email="robin.knight@roadnarrows.com">Robin Knight</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

</package>
